--- a/CSD458_HW1.ipynb
+++ b/CSD458_HW1.ipynb
@@ -122,8 +122,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "split the data to training (80%) and test (20%) sets\n",
-        "and standarize the features if necessary"
+        "standarize the features if necessary"
       ],
       "metadata": {
         "id": "zCUQd84LWkdc"
